objects/DOCU__ESignResponse__c.object
<CustomObject>
    <fields>
        <fullName>DOCU__Filename__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOCU__Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>SESOC__Package__c</referenceTo>
        <relationshipLabel>ESignature Responses</relationshipLabel>
        <relationshipName>ESignResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOCU__Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ESignature Request</label>
        <referenceTo>DOCU__ESignRequest__c</referenceTo>
        <relationshipLabel>ESignature Responses</relationshipLabel>
        <relationshipName>ESignResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ESignature Response</label>
    <listViews>
        <fullName>DOCU__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ESignature Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>